<resources>
    <string name="app_name">Tiniva Agent</string>
    <string name="appLogicId">deliforce3edbee8c0f3cdffa7cda0ee152ca81d2e</string>
    <string name="submit_txt">Submit</string>
    <string name="content_desc">this is  imageview</string>
    <string name="alert_dialog_ok_btn_txt">OK</string>
    <string name="alert_dialog_cancel_btn_txt">Cancel</string>
    <string name="alert_dialog_dismis_confirm_title_txt">Are you sure you want to dismiss?</string>
    <string name="logoutText">Are you sure you want to logout?</string>
    <string name="website">Website</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="logout_app">Logout</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="exit_app">Press once more to exit</string>
    <string name="dialog_before_run_title">Permission needed</string>
    <string name="dialog_before_run_message">Please accept call permission!</string>
    <string name="dialog_positive_button">Got it</string>
    <string name="dialog_location_before_run_message">Please accept location permission!</string>
    <string name="dialog_camera">Please accept camera permission!</string>
    <string name="title_activity_track_driver">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="error_max_images">Maximum 5 images are allowed to add for one task</string>
    <string name="password_mismatch">Passwords are mismatching</string>
    <string name="error_empty_reason">Please enter reason</string>
    <string name="error_email">Please enter valid user name</string>
    <string name="error_url">Please enter valid URL</string>
    <string name="error_email_id">Please enter valid email id</string>
    <string name="error_password">Please enter valid password</string>
    <string name="error_passowrd_pattern">Password must contain 6 or more characters with at least one upper case letter, number &amp; symbol </string>
    <string name="error_confirm">Please enter retype password</string>
    <string name="error_confirm_mismatch">Retype new password mismatching</string>
    <string name="error_min_password">Password length should be minimum 8 letters</string>
    <string name="error_phone">Please enter 10 digit mobile number</string>
    <string name="error_first_name">Please enter valid first name</string>
    <string name="error_last_name">Please enter valid last name</string>
    <string name="error_mobile">Please enter valid mobile number</string>
    <string name="error_name">Please enter name</string>
    <string name="error_token">Please enter token</string>
    <string name="error_mismatch_token">Please enter valid token</string>
    <string name="error_location">Please enter valid location</string>
    <string name="error_bank_name">Please enter bank name</string>
    <string name="error_bank_no">Please enter account no</string>
    <string name="error_ifsc_code">Please enter ifsc code</string>
    <string name="error_branch_name">Please enter branch name</string>
    <string name="error_user_name">Please enter account holder name</string>
    <string name="error_response">Server went down.Please try again</string>
    <string name="error_block_user">Your account was blocked by Admin!Please contact your admin</string>
    <string name="error_exist_mobile">Sorry already mobile number exist</string>
    <string name="error_img_size">Please select image lessthan 5 MB</string>
    <string name="success_password">Password successfully changed!</string>
    <string name="password_fail">Forgot password failed</string>
    <string name="verify_pass">Code was sent to </string>
    <string name="via"> via </string>
    <string name="empty_password">Password should not empty</string>
    <string name="driver_update">Driver profile updated successfully</string>
    <string name="password_length">Password should be morethan 6 letters</string>
    <string name="error_verification_code">Verification code should not empty</string>
    <string name="error_signin">Sign-in failed</string>
    <string name="invalid_verification">Invalid verification code provided, please try again.</string>
    <string name="invalid_verification_english">Invalid verification code provided, please try again.</string>
    <string name="onfailure_api">It seems low internet conncetion.Please try again!</string>
    <string name="error_old_password">Please enter valid current password</string>
    <string name="password_fail_change">Password change failed </string>
    <string name="cancel_txt">Cancel</string>
    <string name="start_txt">Start</string>
    <string name="date_txt">Date</string>
    <string name="time_txt">Time</string>
    <string name="distance_txt">Distance</string>
    <string name="status_txt">Status</string>
    <string name="apply_txt">Apply</string>
    <string name="clear_txt">Clear</string>
    <string name="update_txt">Update</string>
    <string name="login_header_txt">Login to continue</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="forgot_password_txt">Forgot password?</string>
    <string name="login_txt">Login</string>
    <string name="forgot_password_header_txt">Forgot password</string>
    <string name="send_btn_txt">Send</string>
    <string name="success_txt">Successful</string>
    <string name="failure_txt">Failed</string>
    <string name="signature_update">Signature updated successfully</string>
    <string name="signture_added">Signature added successfully</string>
    <string name="add_notes_success">Note added successfully</string>
    <string name="update_note">Note updated successfully</string>
    <string name="delete_note">Note deleted successfully</string>
    <string name="bar_code_success">Barcode added successfully</string>
    <string name="profile_img_success">Profile image updated successfully.</string>
    <string name="task_accept_error">Sorry! This task is already accepted by another driver</string>
    <string name="nav_task">Tasks</string>
    <string name="nav_route">Route</string>
    <string name="nav_earnings">Earnings</string>
    <string name="nav_analytics">Analytics</string>
    <string name="nav_profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="nav_password">Change password</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_online">On-duty</string>
    <string name="nav_offline">Off-duty</string>
    <string name="add_note_txt">Add note</string>
    <string name="add_images_txt">Add images</string>
    <string name="add_signature_txt">Add signature</string>
    <string name="task_id_txt">Task ID</string>
    <string name="cancel_header_txt">Add a reason</string>
    <string name="reason_txt">Reason</string>
    <string name="enter_reason">Enter reason</string>
    <string name="search_txt">Search</string>
    <string name="from_txt">From</string>
    <string name="to_txt">To</string>
    <string name="sort_by_txt">Sort by</string>
    <string name="profile_header_txt">My profile</string>
    <string name="naem_txt">Name</string>
    <string name="mobile_no_txt">Mobile number</string>
    <string name="email_id_txt">Email ID</string>
    <string name="currrent_password_txt">Current password</string>
    <string name="new_password_txt">New password</string>
    <string name="retype_password">Retype password</string>
    <string name="vehicle_type_txt">Vehicle type</string>
    <string name="notifications">Notifications</string>
    <string name="advance_settings">Advanced settings</string>
    <string name="ring_tone_txt">Ringtone</string>
    <string name="vibration_txt">Vibration</string>
    <string name="repeat_txt">Repeat</string>
    <string name="langauge_txt">Language</string>
    <string name="naviagation_txt">Navigation</string>
    <string name="map_style_txt">Map style</string>
    <string name="show_traffic_txt">Show traffic</string>
    <string name="power_saving_txt">Power saving mode</string>
    <string name="navigation_helper_txt">Navigation helper</string>
    <string name="settings_update">Settings updated successfully</string>
    <string name="notes_empty">Please Enter Your Input</string>
    <string name="empty_tasks">No Tasks now</string>
    <string name="unble_tasks">Unable to show tasks</string>
    <string name="unable_load_imgs">Unable to load images due to low internet signals</string>
    <string name="password_success">Your password was changed successfully</string>
    <string name="unable_signture">Unable to store the signature</string>
    <string name="no_signature">no_signature</string>
    <string name="signaute_load">Unable to store the signature</string>
    <string name="type_txt">Type</string>
    <string name="msg_txt">Message</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="splash_content">\t \t \t Bridge between the \n \t Customers and Agents</string>
    <string name="login_to_continue">Login to continue!</string>
    <string name="email_mobile">Email</string>
    <string name="hint_email_mobile">abcd@nextbrainitech.com</string>
    <string name="password">Password</string>
    <string name="hint_pwd">********</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="agent_name">Wlliam Adward</string>
    <string name="duty_status_offline">Offline</string>
    <string name="duty_status_online">On duty</string>
    <string name="menu_task">Tasks</string>
    <string name="menu_route">Route</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_profile">Profile</string>
    <string name="ok_btn">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_bar_code">&#8226; Please add barcode</string>
    <string name="error_actual_customer">&#8226; Please add actual customer</string>
    <string name="btn_update">Update</string>
    <string name="settings_choose_vehicle_type">Choose Vehicle type</string>
    <string name="vehicle_type_walking">Walking</string>
    <string name="vehicle_type_cycle">Cycle</string>
    <string name="vehicle_type_bike">Bike</string>
    <string name="vehicle_type_car">Car</string>
    <string name="vehicle_type_scooter">Scooter</string>
    <string name="settings_ring_title_app_lang">Choose Application Language</string>
    <string name="settings_language_eng">English</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_portuguese">Portuguese</string>
    <string name="settings_language_malay">Malay</string>
    <string name="settings_language_arabic">Arabic</string>
    <string name="add_images">&#8226; Please add images</string>
    <string name="add_notes">&#8226; Please add notes</string>
    <string name="add_signature">&#8226; Please add signature</string>
    <string name="alert">Alert!</string>
    <string name="error_capture_location">&#8226; Please capture customer location</string>
    <string name="settings_ring_title_app_navigation">Choose Navigation</string>
    <string name="google_map">Google Map</string>
    <string name="waze">Waze</string>
</resources>