<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_medium"
    android:background="@color/colorWhite"
    android:padding="@dimen/padding_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/settings_ring_title_app_navigation"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/normal_font" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        android:layout_marginTop="@dimen/margin_medium"/>

    <RadioGroup
        android:id="@+id/radioNavigationSelectionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <RadioButton
            android:id="@+id/radio_google_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/google_map"
            android:textSize="@dimen/_14sdp"
            android:textColor="@drawable/radio_text_theme"
            android:theme="@style/RadioButtonStyle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/colorLightGray" />

        <RadioButton
            android:id="@+id/radio_waze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/margin_small"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/waze"
            android:textColor="@drawable/radio_text_theme"
            android:theme="@style/RadioButtonStyle" />
    </RadioGroup>
</LinearLayout>