<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/large_margin"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:elevation="8dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/normal_font"
                android:padding="@dimen/large_margin"
                android:text="@string/cancel_header_txt"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_16sdp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/normal_font"
            android:text="@string/reason_txt"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/normal_font"
            android:hint="@string/enter_reason"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginTop="@dimen/padding_large"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/TextLowerCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightGray"
                    android:fontFamily="@font/normal_font"
                    android:text="@string/btn_cancel"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_update"
                    style="@style/TextLowerCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorDarkGray"
                    android:fontFamily="@font/normal_font"
                    android:text="@string/btn_update"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>